[project]
name = "audio-deepfake-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahsin Shabbir",email = "ashabbi00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
